# Brenta-Engine

./: .clang-format  .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  GUIDE.md  Makefile  README.md  doxygen.conf  flake.nix  imgui.ini  release.sh  shell.nix
assets/audio/: guitar.pcm
assets/gmtk2024/models/: mosquito.mtl
assets/models/90-room/: room.mtl
assets/models/backpack/: backpack.mtl
assets/models/pane/: pane.mtl
assets/models/robot_sprite/: robot_sprite.mtl
assets/models/room/: Room.mtl
assets/models/simple_cube/: simple_cube.mtl
assets/models/sphere/: sphere.mtl
buil/: CMakeCache.txt  Makefile  cmake_install.cmake
common/headers/: engine_logger.h  engine_logger.hpp
common/sources/: engine_logger.cpp
ecs/headers/: component.h  component.hpp  ecs.h  ecs.hpp  ecs_types.h  ecs_types.hpp  entity.h  entity.hpp  resource.h  resource.hpp  system.h  system.hpp  world.h  world.hpp
ecs/sources/: world.cpp
engine/headers/: buffer.h  buffer.hpp  camera.h  camera.hpp  component.h  ebo.h  engine.h  engine.hpp  engine_audio.h  engine_audio.hpp  engine_input.h  engine_input.hpp  engine_logger.h  engine_time.h  engine_time.hpp  entity.h  frame_buffer.hpp  gl_helper.h  gl_helper.hpp  gui.hpp  mesh.h  mesh.hpp  model.h  model.hpp  particles.h  particles.hpp  resource.h  screen.h  screen.hpp  shader.h  shader.hpp  system.h  text.h  text.hpp  texture.h  texture.hpp  translation.h  translation.hpp  vao.h  vao.hpp  (+2 more)
engine/shaders/: particle_render.fs  particle_render.gs  particle_render.vs  particle_update.gs  text.fs  text.vs
engine/sources/: buffer.cpp  camera.cpp  ebo.cpp  engine.cpp  engine_audio.cpp  engine_input.cpp  engine_logger.cpp  engine_time.cpp  frame_buffer.cpp  gl_helper.cpp  gui.cpp  mesh.cpp  model.cpp  particles.cpp  screen.cpp  shader.cpp  stb_image.cpp  text.cpp  texture.cpp  translation.cpp  vao.cpp  vbo.cpp  world.cpp
examples/: ECS_example.cpp  README.md  audio.cpp  components.cpp  default_shader.vs  ecs.cpp  hdr.cpp  hdr.fs  hdr.vs  load_model.cpp  load_model_and_shader.cpp  load_opengl.cpp  logger.cpp  mandelbrot-set.cpp  mandelbrot.fs  particles.cpp  simple_screen.cpp  systems.cpp  text.cpp
game/headers/: game_ecs.h  game_ecs.hpp  model_component.h  player_component.h  renderer_system.h
game/headers/callbacks/: camera_mouse_callback.h  camera_mouse_callback.hpp  close_window_callback.h  close_window_callback.hpp  play_guitar_callback.h  play_guitar_callback.hpp  toggle_wireframe_callback.h  toggle_wireframe_callback.hpp
game/headers/components/: directional_light_component.h  directional_light_component.hpp  model_component.h  model_component.hpp  physics_component.h  physics_component.hpp  player_component.h  player_component.hpp  point_light_component.h  point_light_component.hpp  sphere_collider_component.h  sphere_collider_component.hpp  transform_component.h  transform_component.hpp
game/headers/entities/: cube_entity.h  cube_entity.hpp  directional_light_entity.h  directional_light_entity.hpp  floor_entity.h  floor_entity.hpp  player_entity.h  player_entity.hpp  point_light_entity.h  point_light_entity.hpp  robot_entity.h  robot_entity.hpp  sphere_entity.h  sphere_entity.hpp
game/headers/resources/: wireframe_resource.h  wireframe_resource.hpp
game/headers/systems/: collisions_system.h  collisions_system.hpp  debug_text_system.h  debug_text_system.hpp  directional_light_system.h  directional_light_system.hpp  fps_system.h  fps_system.hpp  physics_system.h  physics_system.hpp  point_lights_system.h  point_lights_system.hpp  renderer_system.h  renderer_system.hpp
game/shaders/: light_source.fs  particle_render.fs  particle_render.gs  particle_render.vs  particle_update.vs  shader.fs  shader.vs
game/sources/: main.cpp
game/sources/callbacks/: camera_mouse_callback.cpp  close_window_callback.cpp  play_guitar_callback.cpp  toggle_wireframe_callback.cpp
game/sources/entities/: cube_entity.cpp  directional_light_entity.cpp  floor_entity.cpp  player_entity.cpp  point_light_entity.cpp  robot.cpp  sphere_entity.cpp
game/sources/resources/: wireframe_resource.cpp
game/sources/systems/: collisions_system.cpp  debug_text_system.cpp  directional_light_system.cpp  fps_system.cpp  physics_system.cpp  point_lights_system.cpp  renderer_system.cpp
gmtk2024/headers/: game_ecs.h
gmtk2024/headers/callbacks/: dash_callback.h
gmtk2024/headers/components/: model_component.h  particle_component.h  player_component.h
gmtk2024/headers/entities/: player_entity.h
gmtk2024/headers/systems/: debug_text_system.h  player_movement_system.h  render_particles_system.h  renderer_system.h
gmtk2024/shaders/: particle_render.gs
gmtk2024/sources/: main.cpp
gmtk2024/sources/callbacks/: close_window_callback.cpp  dash_callback.cpp
gmtk2024/sources/entities/: player_entity.cpp
gmtk2024/sources/systems/: debug_text_system.cpp  physics_system.cpp  player_movement_system.cpp  render_particles_system.cpp  renderer_system.cpp
include/: shader.h
include/assimp/: revision.h
include/glad/: glad.h
lib/: README.md  libSDL3.so.0.1.2
logs/: log.txt
render/headers/: ebo.h  model.h  shader.h  texture.h  vao.h  vbo.h  vertices.h
render/shaders/: light_source.vs  shader.fs
render/sources/: camera.cpp  display.cpp  glad.c  main.cpp  shader.cpp  texture.cpp
src/: main.cpp  shader.h  tmp.cpp
src/headers/: camera.h  display.h  ebo.h  gl.h  mesh.h  shader.h  texture.h  vbo.h  vertices.h
src/shaders/: shader.fs  shader.vs
src/sources/: camera.cpp  display.cpp  ebo.cpp  gl.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp
tests/: README.md  test.cpp  test_main.cpp
tests/ecs/: component_test.cpp  entity_test.cpp  resource_test.cpp  systems_test.cpp  world_test.cpp
tests/engine/: translation_test.cpp  world_test.cpp
utils/headers/: engine_logger.hpp  utils_types.hpp
utils/sources/: engine_logger.cpp  utils_types.cpp
